# Trinsic_API_Integration_Rust

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: create_session.rs  handle_session.rs  listener.rs  main.rs  session_storage.rs  setup_db.rs
