[package]
name = "trinsic_api_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
warp = "0.3"
log = "0.4"
env_logger = "0.11.5"
anyhow = "1.0"